force-app/main/default/objects/Intapp_Settings__c/fields/Contact_Role_Validation_Contact_Types__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Validation_Contact_Types__c</fullName>
    <description>To add multiple values, use &quot;;&quot; as separator</description>
    <inlineHelpText>To add multiple values, use &quot;;&quot; as separator</inlineHelpText>
    <label>Contact Role Validation - Contact Types</label>
    <type>TextArea</type>
</CustomField>