force-app/main/default/objects/Intapp_Settings__c/fields/Contact_Role_Validation_Error_Text__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Validation_Error_Text__c</fullName>
    <label>Contact Role Validation - Error Text</label>
    <type>TextArea</type>
</CustomField>