force-app/main/default/objects/Intapp_Settings__c/fields/Contact_Role_Validation_Opp_Types__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Validation_Opp_Types__c</fullName>
    <description>Add new values with &apos;;&apos; in between</description>
    <inlineHelpText>Add new values with &apos;;&apos; in between</inlineHelpText>
    <label>Contact Role Validation - Opp Types</label>
    <type>TextArea</type>
</CustomField>