force-app/main/default/objects/Intapp_Settings__c/fields/contact_validation_isactive__c.field-meta.xml
<CustomField>
    <fullName>contact_validation_isactive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contact Role Validation - Active</label>
    <type>Checkbox</type>
</CustomField>