force-app/main/default/objects/Intapp_Settings__c/fields/Different_Product_Line_Check__c.field-meta.xml
<CustomField>
    <fullName>Different_Product_Line_Check__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check if there are different product lines under the same Oppt</description>
    <inlineHelpText>Check if there are different product lines under the same Oppt</inlineHelpText>
    <label>Different Product Line Check</label>
    <type>Checkbox</type>
</CustomField>