force-app/main/default/objects/Intapp_Settings__c/fields/Enable_Opp_to_Quote_Sync__c.field-meta.xml
<CustomField>
    <fullName>Enable_Opp_to_Quote_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, allows syncing of Opp Line Items to Quote Line Items</description>
    <inlineHelpText>When checked, allows syncing of Opp Line Items to Quote Line Items</inlineHelpText>
    <label>Enable Opp to Quote Sync</label>
    <type>Checkbox</type>
</CustomField>