force-app/main/default/objects/Intapp_Settings__c/fields/NS_Customer_webhook_PROD__c.field-meta.xml
<CustomField>
    <fullName>NS_Customer_webhook_PROD__c</fullName>
    <label>NS Prospect/Customer webhook (PROD)</label>
    <type>Url</type>
</CustomField>